Fixed bug where 'add' button was appearing in the flex-start on mobile rather than flex-end. #7

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ header {
 }
 
 .justify-end {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .in-progress-empty-header,
